.charts/tink-backend-integration/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: integration-networkpolicy
  namespace: integration
spec:
  podSelector:
    matchLabels:
      app: integration-service

  egress:
  - {}

  ingress:
  - ports:
    - protocol: TCP
      port: 8443
    from:
    - podSelector:
        matchLabels:
          app: aggregation
    - namespaceSelector:
        matchLabels:
          service: aggregation
  - ports:
    - protocol: TCP
      port: 9130
    from:
    - podSelector:
        matchLabels:
          prometheus-app: prometheus
    - namespaceSelector:
        matchLabels:
          service: monitoring-prometheus

  policyTypes:
  - Egress
  - Ingress
